src/Slider/Slider.css
.slider {
  position: relative;
}

.slider-wrapper {
  display: flex;
}

.slider-wrapper:hover {
  will-change: transform;
}

.slider-wrapper li {
  flex-shrink: 0;
  width: 100vw;
  max-width: 70vw;
  margin: 0 20px;
  border-radius: 4px;
  overflow: hidden;
  opacity: .8;
  transition: transform .7s ease-in-out;
}

.slider-wrapper li.active {
  opacity: 1;
}

.animation-scale li {
  transform: scale(.9);
  width: 100vw;
  max-width: 75vw;
}

.animation-scale li.active {
  transform: scale(1);
}

.slider-bullets {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.slider-bullets .slider-bullets-item {
  width: 12px;
  height: 12px;
  background-color: #6a78ff;
  border-radius: 50%;
  overflow: hidden;
  text-indent: -999px;
  cursor: pointer;
  margin: 5px;
  transition: .3s ease-in-out;
}

.slider-bullets .slider-bullets-item:hover,
.slider-bullets .slider-bullets-item.active {
  background-color: #6a78ff;
  transform: scale(1.2);
}

.slider-nav-prev,
.slider-nav-next {
  position: absolute;
  top: 50%;
  height: 40px;
  width: 40px;
  border: 0;
  font-size: 0;
  border-radius: 50%;
  transition: transform .3s ease-in-out;
  cursor: pointer;
  background: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNNy4zMyAyNGwtMi44My0yLjgyOSA5LjMzOS05LjE3NS05LjMzOS05LjE2NyAyLjgzLTIuODI5IDEyLjE3IDExLjk5NnoiLz48L3N2Zz4=') center center no-repeat;
  background-color: #6a78ff;
}

.slider-nav-prev:hover,
.slider-nav-next:hover {
  transform: scale(1.2);
}

.slider-nav-prev:hover {
  transform: scale(1.2) rotateY(180deg);
}

.slider-nav-prev {
  left: calc(50% - 46vw);
  transform: rotateY(180deg);
}

.slider-nav-next {
  right: calc(50% - 46vw);
}

@media only screen and (max-width: 757px) {
  .slider-nav-prev,
  .slider-nav-next {
      top: 35%;
  }
  .slider-nav-prev {
      left: 10px;
  }
  .slider-nav-next {
      right: 10px;
  }
  .slider-nav-prev:hover,
  .slider-nav-next:hover {
      transform: unset;
  }
}

